--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+1.8.4.5
+Support Android 1.5 phones (Cupcake).
+
 1.8.4.4
 ROM Manager rebooting into recovery now creates the /cache/recovery directory if needed. This should fix the "reboot into recovery and sit at menu" bug.
 
