--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+1.8.6.2
+Add better license checking.
+Whitelisted users can now properly use automated backups.
+Add better error messages.
+Add version string to the title of ROM Manager.
+ROM Manager Manifests now support the "all" entry for target devices.
+
 1.8.5.3
 Add Settings screen.
 New application and notification icons.
