--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+1.8.6.3
+Cache recoveries so reflashing doesn't require a redownload.
+
 1.8.6.2
 Direct users to the Market download if an upgrade is detected.
 
