--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+1.8.6.6
+Kanged pretty progress bar from TDUpdater by ChrisSoyars.
+
 1.8.6.5
 Properly cancel pending backups when automated backups are disabled.
 
