--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,12 @@
+1.8.8.0
+Download counter for ROMs.
+
+1.8.7.8
+Evo support.
+
+1.8.7.7
+Desire support.
+
 1.8.7.4
 Fix license bug. (Sorry!)
 Add QR code downloads for premium users.
