up the recovery. changelog.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2.0.0.8
+PayPal Premium purchase support completed, pending approval by PayPal.
+Detection of broken recovery and user guidance for fixing it.
+
 2.0.0.3
 German Translations
 Advertising (you can turn it off!)
