--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2.0.2.3
+Do not allow purchases if the license server is not reachable.
+
+2.0.2.2
+Allow license retrieval attempt through Settings.
+
 2.0.1.8
 Add device id and fix NPE when using check for updates.
 
