--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+2.5.0.0
+Downloads are now ongoing notifications. Clicking the download prompts the user to cancel.
+
 2.0.3.0
 Fix pre eclair bug.
 
