--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+2.5.1.1
+Fix custom flash_image command for alternate recoveries.
+
 2.5.1.0
 Fix NPE in tablet devices.
 Android 1.6+ devices only.
