--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,9 @@
 3.0.0.2
 Show a download screen when a download starts.
 
+3.0.0.1
+Fix install from intents.
+
 3.0.0.0
 Support for 3.0.0.0 recoveries.
 
